Add div's in html for question and answers

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>True or False</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div id="question-container" class="hidden"></div>
+        <div class="question">Question</div>
+        <div id="answer-btns">
+            <button class="true-btn">True</button>
+            <button class="false-btn">False</button>
+        </div>
+    </div>
+<script src="script.js"></script>
 </body>
 </html>
